<resources>
    <string name="app_name">GibberX</string>
    <string name="login_text">Login Page</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="attempt_text">Attempt</string>
    <string name="login_button_text">Login</string>
    <string name="login_welcome">You have logged in!</string>
    <string name="home_start_reading">Start Reading</string>
    <string name="home_profile">Profile</string>
    <string name="home_settings">Settings</string>
    <string name="home_log_out">Log Out</string>
    <string name="return_home">Return Home</string>
    <string name="read_new_book">Read New Book</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="review_words">Review Words</string>
    <string name="the_little_prince">The Little Prince</string>
    <string name="return_to_reading_menu">Return to Reading Menu</string>
    <string name="alice_in_wonderland">Alice in Wonderland</string>
    <string name="currently_reading">Currently Reading:</string>
    <string name="return_to_book_selection">Return to Book Selection</string>
    <string name="create_acount">Create Acount</string>
</resources>
