<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <Button
            android:text="@string/home_start_reading"
            android:onClick="startReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_start_reading"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/home_profile"
            android:onClick="openProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_check_profile"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/button_start_reading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/home_settings"
            android:onClick="openSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_check_settings"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/button_check_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/home_log_out"
            android:onClick="logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_log_out"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/button_check_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</android.support.constraint.ConstraintLayout>