<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReadingMenuActivity">

    <Button
            android:text="@string/return_home"
            android:onClick="returnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_return_home_from_reading"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/read_new_book"
            android:onClick="chooseBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_read_new_book"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/continue_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_continue_reading"
            android:enabled="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_read_new_book"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/review_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/button_review_words"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_continue_reading"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>