<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:text="@string/login_text"
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_login" android:id="@+id/tableLayout"
            tools:layout_editor_absoluteX="50dp">
        <TableRow>
            <TextView
                    android:text="@string/username_text"
                    android:id="@+id/textView_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
            />
            <EditText
                    android:id="@+id/editText_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:gravity="center"
            />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_password"
                    android:layout_weight="1"
                    android:gravity="center"
            />
            <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_weight="1"
                    android:gravity="center"
            />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/attempt_text"
                    android:id="@+id/textView_attempt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
            />
            <TextView
                    android:text=""
                    android:id="@+id/textView_attempt_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:gravity="center"
            />
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/login_button_text"
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"/>
    <Button
            android:text="@string/return_home"
            android:onClick="returnToCreateOrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>