<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_login" android:id="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TableRow>
            <TextView
                    android:text="@string/username_text"
                    android:id="@+id/textView_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
            />
            <EditText
                    android:id="@+id/editText_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:gravity="center"
            />
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_password"
                    android:layout_weight="1"
                    android:gravity="center"
            />
            <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_weight="1"
                    android:gravity="center"
            />
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/create_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_create_account" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"/>
    <Button
            android:text="@string/return_home"
            android:onClick="returnToCreateOrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_return_home_from_create" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_create_account"/>
</android.support.constraint.ConstraintLayout>